Replace Collectors.toList() with toList()
See gh-1640