@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2023 the original author or authors.
+ * Copyright 2012-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import io.spring.initializr.generator.version.Version;
@@ -161,7 +160,7 @@ class MetadataVerificationTests {
 			.stream()
 			.map(DefaultMetadataElement::getId)
 			.map(VersionParser.DEFAULT::parse)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	private Collection<DependencyGroup> groups() {
@@ -169,10 +168,7 @@ class MetadataVerificationTests {
 	}
 
 	private Collection<Dependency> dependenciesForBootVersion(DependencyGroup group, Version bootVersion) {
-		return group.getContent()
-			.stream()
-			.filter((dependency) -> dependency.match(bootVersion))
-			.collect(Collectors.toList());
+		return group.getContent().stream().filter((dependency) -> dependency.match(bootVersion)).toList();
 	}
 
 }
